Closed Bug 331590 Opened 19 years ago Closed 19 years ago

Clicking on the button is not possible anymore with this testcase

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: roc)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

See upcoming testcase, I should be able to click on the button and when hovering over the button, it should turn green. This regressed between 2006-02-19 and 2006-02-21. I think it's a regression from bug 326827, because it only happens with buttons (I tested with other elements, they work fine).
Attached file testcase
Flags: blocking1.9a1?
Blocks: 317375
What's happening here is that we're putting the inline-box's background into the Content display list (where all inline backgrounds go). Then we're putting the regular box and block children's backgrounds into the BlockBorderBackgrounds() list. But Content() comes after BlockBorderBackgrounds() so the DIV ends up catching the events. Basically, what should happen here is that an inline-level box should pass DISPLAY_CHILD_INLINE when it calls BuildDisplayListForChild.
Attached patch fixSplinter Review
No, actually what we want to do is to treat inline-box like inline-block and other inline things that contain block-level content.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #220086 - Flags: superreview?(dbaron)
Attachment #220086 - Flags: review?(dbaron)
Comment on attachment 220086 [details] [diff] [review] fix r+sr=dbaron; sorry for the delay
Attachment #220086 - Flags: superreview?(dbaron)
Attachment #220086 - Flags: superreview+
Attachment #220086 - Flags: review?(dbaron)
Attachment #220086 - Flags: review+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Depends on: 340798
Depends on: 341043
Verified FIXED using https://bugzilla.mozilla.org/attachment.cgi?id=216110&action=view as the testcase with build 2006-06-09-18 of SeaMonkey trunk under Windows XP.
Status: RESOLVED → VERIFIED
Flags: blocking1.9a1?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: