Bug 331590. Treat inline-box/grid/stack XUL elements like inline blocks, making them pseudo-stacking-contexts. r+sr=dbaron